crates/plotnik-tests/tests/03-analyze/alternations/mixed_reported_per_alternation.txt
Q = (foo
  [
    A: (a)
    (b)
  ]
  [
    C: (c)
    (d)
  ]
)
------------------ DIAGNOSTICS -------------------
error: cannot mix enum and union branches
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - labeled alternative here
4 |     (b)
  |     ^^^
  |
help: use all labels for an enum, or none for a merged struct

error: cannot mix enum and union branches
 --> query.ptk:8:5
  |
7 |     C: (c)
  |     - labeled alternative here
8 |     (d)
  |     ^^^
  |
help: use all labels for an enum, or none for a merged struct
-------------------- SYMBOLS ---------------------
